--- a/_posts/2010-11-16-3-21200.md
+++ b/_posts/2010-11-16-3-21200.md
@@ -28,9 +28,9 @@ Wang Ci, however, was skeptical. While he didn't understand the Australians' kno
 
 "It must be Zhang Xingjiao!"
 
-Wang Ci knew of this man. Zhang Xingjiao was a registered student candidate in the county. Although he hadn't passed the examinations, he fell under the jurisdiction of the county's education official. Zhang Xingjiao's family had once been reasonably well-off, but they were ruined by Gou Da's oppression. For failing to pay his grain taxes, Zhang Xingjiao had been arrested, brought before the county yamen for punishment, and was even to be subjected to the cangue. It was Wang Ci himself who had pleaded for him, saving his life. He hadn't heard any news of the man for a long time since. To think he had thrown in his lot with the髡-thieves! It was likely he who had guided the髡-thieves in their attack on the Gou estate right after they landed.
+Wang Ci knew of this man. Zhang Xingjiao was a registered student candidate in the county. Although he hadn't passed the examinations, he fell under the jurisdiction of the county's education official. Zhang Xingjiao's family had once been reasonably well-off, but they were ruined by Gou Da's oppression. For failing to pay his grain taxes, Zhang Xingjiao had been arrested, brought before the county yamen for punishment, and was even to be subjected to the cangue. It was Wang Ci himself who had pleaded for him, saving his life. He hadn't heard any news of the man for a long time since. To think he had thrown in his lot with the short-haired bandits! It was likely he who had guided the short-haired bandits in their attack on the Gou estate right after they landed.
 
-Wang Ci didn't think his actions were entirely wrong—it was for the sake of avenging his family, after all. Besides, the Gou family were no saints; their destruction was a scourge removed from Lingao. But to continue serving the rebels after taking revenge was a great moral failing. Wang Ci thought he must find a way to meet him and persuade him to leave the髡-thieves. In a way, he was Zhang Xingjiao's teacher.
+Wang Ci didn't think his actions were entirely wrong—it was for the sake of avenging his family, after all. Besides, the Gou family were no saints; their destruction was a scourge removed from Lingao. But to continue serving the rebels after taking revenge was a great moral failing. Wang Ci thought he must find a way to meet him and persuade him to leave the short-haired bandits. In a way, he was Zhang Xingjiao's teacher.
 
 He nodded thoughtfully. "Are there any other scholars?"
 
@@ -94,7 +94,7 @@ Lu Da grew impatient. "Since it's all wrong, would Master Wang be willing to tea
 
 Wang Ci immediately caught the sarcasm in his tone. His face changed color, and he cursed inwardly, "He's been bewitched!" But then he thought again: he had no money, no men, and couldn't even raise the stipend for a few scholars. The other side not only taught but also provided food and clothing. In comparison, he was utterly powerless. A sense of despair washed over him.
 
-The common people, what do they seek but food and clothing? The髡-thieves have seized upon this to deceive the masses. What use is a belly full of classics? Even if Confucius himself were resurrected, he would be helpless!
+The common people, what do they seek but food and clothing? The short-haired bandits have seized upon this to deceive the masses. What use is a belly full of classics? Even if Confucius himself were resurrected, he would be helpless!
 
 At this thought, he was overcome with despondency. Wang Ci feebly rebuked him, "What do you know! Go on!" He dragged his feet and headed back towards the county town.
 
