--- a/_posts/2010-11-19-3-21500.md
+++ b/_posts/2010-11-19-3-21500.md
@@ -32,7 +32,7 @@ Wu Mingjin snorted. "What can I do? Since the school lands are in their hands, i
 
 Wang Ci was greatly embarrassed. His political acumen was not high, and he hadn't realized his past complaints had offended his superior. He thought the magistrate was angry at him for leasing the school lands to the Tiandihui on his own authority. He quickly stood up and said, "It was my foolishness..."
 
-"The county has no money for this now. Since they want to repair it, let them." Wu Mingjin had adopted a completely hands-off attitude towards the髡-thieves' activities. No matter what, they would do what they wanted, and any resistance from him would be like a praying mantis trying to stop a chariot.
+"The county has no money for this now. Since they want to repair it, let them." Wu Mingjin had adopted a completely hands-off attitude towards the short-haired bandits' activities. No matter what, they would do what they wanted, and any resistance from him would be like a praying mantis trying to stop a chariot.
 
 Wang Ci got no guidance from Wu Mingjin, but he did get a glimpse of the magistrate's recent "Australian enjoyments." He wanted to see Master Wang, the advisor, but the servant said the advisor was taking a nap and not seeing guests. Dejected, he returned to the county school.
 
@@ -40,15 +40,15 @@ As he entered the Lingxing Gate, he saw the gatekeeper busy by a yellow-mud stov
 
 It was a page from the *Analects*!
 
-He had only ordered the髡-thieves' books to be burned, not the *Analects*. While the Four Books and Five Classics were not rare, they were impossible to buy in Lingao and had to be brought from the prefectural city! To use them as firewood—
+He had only ordered the short-haired bandits' books to be burned, not the *Analects*. While the Four Books and Five Classics were not rare, they were impossible to buy in Lingao and had to be brought from the prefectural city! To use them as firewood—
 
 Wang Ci nearly fainted from anger. He was about to rush over and berate the man when he froze.
 
 This copy of the *Analects* was horizontally printed!
 
-In the Great Ming, besides these髡-thieves, no one else printed books horizontally!
+In the Great Ming, besides the Australians, no one else printed books horizontally!
 
-So the fifty books the髡-thieves had sent were not those strange *Literacy Primers*, but "proper books" like the Four Books and Five Classics! At this thought, he mustered all his strength and roared:
+So the fifty books the short-haired bandits had sent were not those strange *Literacy Primers*, but "proper books" like the Four Books and Five Classics! At this thought, he mustered all his strength and roared:
 
 "Stop!"
 
