--- a/_posts/2010-11-20-3-21600.md
+++ b/_posts/2010-11-20-3-21600.md
@@ -10,7 +10,7 @@ The courtyard of the Jasmine Pavilion had originally been filled with jasmine fl
 
 Wang Ci was dumbfounded. The concept of private gardens had never existed in Lingao. Apart from the modest rock and water decorations in the backyard of the county yamen, the Jasmine Pavilion was the finest man-made landscape in the county, often serving as a venue for elegant gatherings and banquets for local officials and literati.
 
-The short duration of the construction also seemed unimaginable to Wang Ci. He hadn't seen the髡-thieves use any special mechanical assistance, nor did they employ an overwhelming number of workers. By his estimation, if he had organized the repairs himself, it would have taken at least half a month, not to mention the fact that the Australians had also expanded the site with many new buildings.
+The short duration of the construction also seemed unimaginable to Wang Ci. He hadn't seen the short-haired bandits use any special mechanical assistance, nor did they employ an overwhelming number of workers. By his estimation, if he had organized the repairs himself, it would have taken at least half a month, not to mention the fact that the Australians had also expanded the site with many new buildings.
 
 In addition to the original structures, the construction team added several new buildings, including a two-story waterside pavilion for gatherings and banquets, modern-style classrooms and dormitories, as well as toilets and bathhouses.
 
@@ -38,13 +38,13 @@ As expected, not only did all the county's *juren* and *xiucai* declare it a gra
 
 Although Liu Dalin still had some reservations about the Crossing Group, he had witnessed their actions over the past year—suppressing bandits, building roads, providing relief to the people, and settling the poor. Though he remained behind closed doors, his family was constantly gathering news from outside.
 
-He was a local *jinshi*, famous throughout the county and even the entire Qiongzhou Prefecture. He knew he was a target for these髡-thieves. So, for these past months, he had stayed at home, engrossed in his books, not only avoiding going out but also seeing few guests. Only his closest relatives and friends were granted an audience. He kept poison and a knife by his side, ready to take his own life at any moment. This was partly to avoid being captured and humiliated—he had advised on the attack against the髡-thieves and heard that many of them had been killed, so he couldn't be sure they wouldn't seek revenge. It was also to prevent them from forcing him to take up a puppet post, in which case he could die to prove his innocence. The first time the髡-thieves entered the city, the atmosphere in Liu Dalin's household was extremely tense. Not just him, but his entire family and servants were prepared to die together.
+He was a local *jinshi*, famous throughout the county and even the entire Qiongzhou Prefecture. He knew he was a target for these australian bandits. So, for these past months, he had stayed at home, engrossed in his books, not only avoiding going out but also seeing few guests. Only his closest relatives and friends were granted an audience. He kept poison and a knife by his side, ready to take his own life at any moment. This was partly to avoid being captured and humiliated—he had advised on the attack against the short-haired bandits and heard that many of them had been killed, so he couldn't be sure they wouldn't seek revenge. It was also to prevent them from forcing him to take up a puppet post, in which case he could die to prove his innocence. The first time the short-haired bandits entered the city, the atmosphere in Liu Dalin's household was extremely tense. Not just him, but his entire family and servants were prepared to die together.
 
-Unexpectedly, the髡-thieves retreated after entering the city, merely delivering a few dozen pirate heads to the county. In the following months, apart from a group of them wandering into the city during the New Year, no large contingent of their forces entered the city again. As for Liu Dalin's family, they were completely ignored—it was as if the髡-thieves didn't even know a person like Liu Dalin existed in Lingao.
+Unexpectedly, the short-haired bandits retreated after entering the city, merely delivering a few dozen pirate heads to the county. In the following months, apart from a group of them wandering into the city during the New Year, no large contingent of their forces entered the city again. As for Liu Dalin's family, they were completely ignored—it was as if the short-haired bandits didn't even know a person like Liu Dalin existed in Lingao.
 
-The *jinshi* had imagined countless times how the髡-thieves would storm his residence, holding a knife to his throat, and how he would stand unyielding, either dying while cursing the rebels or taking poison... But none of the scenes he had imagined came to pass. No one came seeking revenge, nor did anyone try to coerce or entice him into taking a puppet post. While relieved, he also felt a sense of disappointment—these髡-thieves were truly clueless.
+The *jinshi* had imagined countless times how the short-haired bandits would storm his residence, holding a knife to his throat, and how he would stand unyielding, either dying while cursing the rebels or taking poison... But none of the scenes he had imagined came to pass. No one came seeking revenge, nor did anyone try to coerce or entice him into taking a puppet post. While relieved, he also felt a sense of disappointment—these bandits were truly clueless.
 
-His family, unaware of his thoughts, breathed a sigh of relief that the髡-thieves were not bothering them. When they relayed the news from outside, Liu Dalin, though he never commented, was secretly astonished. What were these overseas Australians, who claimed to be descendants of the Song, really after in Lingao?
+His family, unaware of his thoughts, breathed a sigh of relief that the short-haired bandits were not bothering them. When they relayed the news from outside, Liu Dalin, though he never commented, was secretly astonished. What were these overseas Australians, who claimed to be descendants of the Song, really after in Lingao?
 
 The Australians suppressed bandits, built roads, opened workshops, and constructed waterworks in Lingao—not a single one of these actions was not beneficial to the country and the people. They had traveled thousands of miles from their homeland to this remote southern county of the Great Ming to do all this. In this era, there was no concept of "the spirit of Lei Feng." Liu Dalin couldn't see what practical benefits they could gain from "learning from Lei Feng" in Lingao.
 
