--- a/_posts/2010-11-21-3-21700.md
+++ b/_posts/2010-11-21-3-21700.md
@@ -34,7 +34,7 @@ Xiong Buyou observed that the scholars' perception of the Crossing Group was one
 
 *This old man still has his doubts about us,* Xiong Buyou thought. *But we have plenty of sugar-coated bullets here.*
 
-Meanwhile, Wu Mingjin saw that most of the county's *juren* and *xiucai* had arrived and that none seemed to have "joined the rebels," and he breathed a sigh of relief. He called Wang Ci aside and asked in a low voice if the髡-thieves had made any moves to recruit the local scholars. He also inquired if the髡-thieves had attached any conditions to the restoration of the Jasmine Pavilion, such as requiring the county's scholars to do something for them.
+Meanwhile, Wu Mingjin saw that most of the county's *juren* and *xiucai* had arrived and that none seemed to have "joined the rebels," and he breathed a sigh of relief. He called Wang Ci aside and asked in a low voice if the short-haired bandits had made any moves to recruit the local scholars. He also inquired if the short-haired bandits had attached any conditions to the restoration of the Jasmine Pavilion, such as requiring the county's scholars to do something for them.
 
 Wang Ci quickly replied that their restoration of the Jasmine Pavilion and the county school was unconditional and that they had not asked the scholars to do anything. Wu Mingjin's face showed disbelief, and he questioned him repeatedly, much to Wang Ci's annoyance. Finally, Wang Ci sneered and said, "The scholars are all outside. I will call them in now, and Your Honor can ask them yourself!"
 
