--- a/_posts/2010-11-22-3-21800.md
+++ b/_posts/2010-11-22-3-21800.md
@@ -62,7 +62,7 @@ With the agreement reached, Wang Ci felt that the financial problems that had lo
 
 For the Crossing Group, the Agricultural Committee was confident that the income from the school lands, using scientific farming methods, would be sufficient to cover the regular expenses of the county school and the academy. There would even be a considerable surplus. Even if there were no surplus, the Executive Committee felt it was a worthwhile endeavor, at least in terms of winning the hearts of the local intellectuals.
 
-In addition to the Jasmine Pavilion Academy, the renovation of the county school and the Confucian Temple was also in full swing. Before long, these renovation projects were completed one after another. The stipends provided by the foundation also brought the sound of reading back to the long-abandoned county school. The subsidized scholars returned one by one. The foundation not only provided the subsidized scholars with the stipulated six *dou* of rice per month but also had Wang Ci compile a list of *fusheng* and *zengsheng* with financial difficulties to study at the county school, also providing them with six *dou* of rice. The髡-thieves, who had previously had a poor reputation among the scholars, suddenly became the "Australians."
+In addition to the Jasmine Pavilion Academy, the renovation of the county school and the Confucian Temple was also in full swing. Before long, these renovation projects were completed one after another. The stipends provided by the foundation also brought the sound of reading back to the long-abandoned county school. The subsidized scholars returned one by one. The foundation not only provided the subsidized scholars with the stipulated six *dou* of rice per month but also had Wang Ci compile a list of *fusheng* and *zengsheng* with financial difficulties to study at the county school, also providing them with six *dou* of rice. The short haired bandits, who had previously had a poor reputation among the scholars, suddenly became the "Australians."
 
 Xiong Buyou was in high spirits after accomplishing this task. He left the city with his men and boarded the public ox-cart from the West Gate of the county to Bairen. After trial-running an ox-cart freight system, Shan Daoqian had also set up a simple ox-cart public transport system. There was a main station in both Bopu and the East Gate Market, with temporary ox pens and vehicle repair shops. The service ran from five in the morning to four in the afternoon, with departures every hour. There were several stops along the route. They used four-wheeled carts pulled by two oxen, with seats, steps for getting on and off, and a foldable canopy for rainy days. To accommodate the local farmers who were accustomed to carrying large amounts of goods, luggage racks were installed on the outside of the carts for hanging rattan baskets and loose items.
 
