--- a/_posts/2012-1-10-5-01300.md
+++ b/_posts/2012-1-10-5-01300.md
@@ -38,7 +38,7 @@ Sure enough, the dishes that were served were different from the Cantonese cuisi
 
 "This crab is made with sea crab. The meat is picked out, and the outside is seasoned with cheese..." Huang Shunlong said eloquently.
 
-The wine served was the most fashionable "Peerless Scholar" from Guangzhou. Lin Ming had often bought this wine for his colleagues from the north. Anyone who came to Guangdong on official business from the north would buy a few boxes to take back as gifts. Sometimes people would even send letters asking him to buy it for them. Lin Ming often had to send people to Guangzhou to buy this wine. Sometimes, if the person was a high-ranking official or an important figure, he would have to pay for it himself—Gao Ju was not a minor figure from whom he could casually demand gifts. He had spent a lot of money on this. Of course, the taste of "Peerless Scholar" was pure and sweet, indeed not comparable to ordinary local liquor. After Wang Zunde's "punitive expedition against the髡-thieves," the supply of "Peerless Scholar" was cut off, and its price skyrocketed. Lin Ming rarely got to drink it himself anymore.
+The wine served was the most fashionable "Peerless Scholar" from Guangzhou. Lin Ming had often bought this wine for his colleagues from the north. Anyone who came to Guangdong on official business from the north would buy a few boxes to take back as gifts. Sometimes people would even send letters asking him to buy it for them. Lin Ming often had to send people to Guangzhou to buy this wine. Sometimes, if the person was a high-ranking official or an important figure, he would have to pay for it himself—Gao Ju was not a minor figure from whom he could casually demand gifts. He had spent a lot of money on this. Of course, the taste of "Peerless Scholar" was pure and sweet, indeed not comparable to ordinary local liquor. After Wang Zunde's "punitive expedition against the short-haired bandits," the supply of "Peerless Scholar" was cut off, and its price skyrocketed. Lin Ming rarely got to drink it himself anymore.
 
 "What is this? Why is it bubbling?" Li Yongxun asked in surprise, looking at the orange water in the glass cup, with fine bubbles rising from the bottom in a stream.
 
@@ -72,7 +72,7 @@ Lin Ming was very interested in this. In their casual conversation, he learned t
 
 "Exactly. Although the Australians are overseas barbarians, their various luxuries are no less impressive than those of our Great Ming," Huang Shunlong said, seeing that today's hospitality was very much to the honored guest's liking, and he was in high spirits for conversation. "Take this Australian cuisine, for example. Many of the dishes are things I had never even thought of!"
 
-Lin Ming made some perfunctory remarks, drinking wine and eating. But he listened carefully to every word Huang Shunlong said. He felt that this Manager Huang seemed to have a very close relationship with the Australians in Lin'gao. He began to probe indirectly. He figured that since the Australians had defeated the government forces this time and had even laid siege to Guangzhou, they would inevitably be the enemy of the Great Ming in the future, and there would surely be more wars. For this reason, Lin Ming paid close attention to matters concerning the Australians. One day, if the court were to launch a major expedition against the髡-thieves, and if he were an "Australia expert," he would have a good chance of getting a military commendation, promotion, and wealth.
+Lin Ming made some perfunctory remarks, drinking wine and eating. But he listened carefully to every word Huang Shunlong said. He felt that this Manager Huang seemed to have a very close relationship with the Australians in Lin'gao. He began to probe indirectly. He figured that since the Australians had defeated the government forces this time and had even laid siege to Guangzhou, they would inevitably be the enemy of the Great Ming in the future, and there would surely be more wars. For this reason, Lin Ming paid close attention to matters concerning the Australians. One day, if the court were to launch a major expedition against the short-haired bandits, and if he were an "Australia expert," he would have a good chance of getting a military commendation, promotion, and wealth.
 
 Huang Shunlong was eager to curry favor with him, and Lin Ming did his best to be agreeable. The two of them became more and more congenial. Huang Shunlong was in high spirits and personally toasted Lin Ming. As he became more intoxicated, his speech loosened.
 
