--- a/_posts/2012-1-12-5-01500.md
+++ b/_posts/2012-1-12-5-01500.md
@@ -46,9 +46,9 @@ Now she found that this pavilion was very strange. The lower part of the pavilio
 
 The iron pipe was supported by brick and stone piers on the ground and extended to a one-story house at the other end of the courtyard. The house was unremarkable, with all its doors and windows open. It was brightly lit inside, and several figures could be seen busy in the middle of the room, knocking and hammering. But she couldn't see clearly what they were doing.
 
-Li Yongxun had learned some skills in stealth, wall-climbing, and tracking, but now she had difficulty moving. She could only widen her eyes and try to see the situation in the courtyard. Fortunately, the doors and windows of the house were large and the light was bright, so she could barely see that there were strange machines inside. She remembered that when Governor Wang was preparing to attack the髡-thieves, the Zhiming Tower in Guangzhou was sealed off, and several Australian machines were seized from it. The idle people all went to watch. She and her cousin had also pestered her brother-in-law to take them to see it. The appearance was similar to this one.
+Li Yongxun had learned some skills in stealth, wall-climbing, and tracking, but now she had difficulty moving. She could only widen her eyes and try to see the situation in the courtyard. Fortunately, the doors and windows of the house were large and the light was bright, so she could barely see that there were strange machines inside. She remembered that when Governor Wang was preparing to attack the short-haired bandits, the Zhiming Tower in Guangzhou was sealed off, and several Australian machines were seized from it. The idle people all went to watch. She and her cousin had also pestered her brother-in-law to take them to see it. The appearance was similar to this one.
 
-"Hmph, Manager Huang's dealings with the髡-thieves are quite close," Li Yongxun thought. At this moment, she saw a big man, over seven feet tall, come out of the house. His long robe was tucked into his waistband, and his body was stained with oil. A young boy next to him quickly brought him a large cup.
+"Hmph, Manager Huang's dealings with the short-haired bandits are quite close," Li Yongxun thought. At this moment, she saw a big man, over seven feet tall, come out of the house. His long robe was tucked into his waistband, and his body was stained with oil. A young boy next to him quickly brought him a large cup.
 
 "Master, have some tea."
 
