--- a/_posts/2012-1-14-5-01700.md
+++ b/_posts/2012-1-14-5-01700.md
@@ -12,13 +12,13 @@ The sedan chair was carried all the way onto the pier and stopped next to the sh
 
 A gangplank was lowered from the Lin'gao ship, and several big men guarded the area around it. Someone helped a master-like figure out of the sedan chair. He wore a "free and easy" scarf, a wide robe, and a rare pair of black crystal glasses on his face. The master's movements were clumsy. He fumbled around and had to be half-supported and half-carried by two people on either side to barely get on the gangplank. Li Yongxun secretly wondered—why was this person moving so strangely? Could he be sick?
 
-She watched them with great interest. Suddenly, a thought came to her—could this be Censor Gao?! Li Yongxun immediately became nervous. That's right! Her brother-in-law had said that there were two main beneficiaries of Censor Gao's disappearance: the Portuguese and the髡-thieves. It made sense for either side to have kidnapped Gao Shunqin.
+She watched them with great interest. Suddenly, a thought came to her—could this be Censor Gao?! Li Yongxun immediately became nervous. That's right! Her brother-in-law had said that there were two main beneficiaries of Censor Gao's disappearance: the Portuguese and the short-haired bandits. It made sense for either side to have kidnapped Gao Shunqin.
 
 She widened her eyes and looked at the group, and the more she looked, the stranger it seemed. The escorting servants surrounded the master so tightly that it seemed they were deliberately blocking the view of others. Their actions were very suspicious.
 
 Li Yongxun was instantly excited. Although there was no reason to believe that the person they were taking away was Censor Gao, besides the strange behavior of the group, she was immediately captivated by the idea of being able to achieve a great merit. The more she looked, the more she felt that this person was Master Gao.
 
-Master Gao had really been kidnapped by the髡-thieves! Now the髡-thieves were taking him to Lin'gao. At this thought, her heart pounded wildly—just getting this news was a great achievement! She had to go back and report to her brother-in-law immediately!
+Master Gao had really been kidnapped by the short-haired bandits! Now the short-haired bandits were taking him to Lin'gao. At this thought, her heart pounded wildly—just getting this news was a great achievement! She had to go back and report to her brother-in-law immediately!
 
 Various scenes of being rewarded for her merit had already appeared in Li Yongxun's mind. Her brother-in-law would surely be pale with anger but helpless. Not to mention her family—the Li family had served as hereditary Jinyiwei for generations. When had they ever had such a glorious achievement? This great merit might even earn her the position of a banner commander or a platoon commander. She had heard that in the early days of the Ming Dynasty, there were also women who served as Jinyiwei, specializing in investigation and arrest.
 
@@ -88,14 +88,14 @@ Li Yongxun's strange disappearance put a mysterious end to the entire Gao Shunqi
 
 Hearing that there was a lead on Censor Gao, the Xiangshan County Magistrate and the Xiangshan County Prefect did not dare to be negligent and came to Macau one after another to negotiate with the Portuguese. The Macau Municipal Council did not dare to defy the request of the Ming officials and immediately ordered a city-wide search.
 
-But there was no trace of either Gao Shunqin or Li Yongxun. Only from the tea stall owner at the pier did Lin Ming learn that Li Yongxun had appeared at the pier and had asked about the people from Lin'gao. And she had only left the tea stall after seeing a group of Australians walk by. This greatly increased the suspicion on the髡-thieves. At his request, the Portuguese searched the Lin'gao warehouse in the Fifth Lane and arrested a few people. But upon interrogation on the spot, it was found that they were all Macau locals, just hired to guard the goods.
+But there was no trace of either Gao Shunqin or Li Yongxun. Only from the tea stall owner at the pier did Lin Ming learn that Li Yongxun had appeared at the pier and had asked about the people from Lin'gao. And she had only left the tea stall after seeing a group of Australians walk by. This greatly increased the suspicion on the short-haired bandits. At his request, the Portuguese searched the Lin'gao warehouse in the Fifth Lane and arrested a few people. But upon interrogation on the spot, it was found that they were all Macau locals, just hired to guard the goods.
 
 Just as he was about to further investigate the Australians' businesses and ships in Macau, a message came from Guangzhou: Li Fengjie told him not to harass the Australians too much—he was very afraid of provoking another incident like the shelling of Humen and the burning of the Five Goats Station. With this news, the wind changed. The Xiangshan County Magistrate said that if there was no evidence that Gao Shunqin had been to Macau, it would be inappropriate to continue the search. And the Portuguese also gradually became uncooperative.
 
 Lin Ming was at a disadvantage, being alone in Macau. He had never thought that Gao Shunqin was in Macau in the first place, and he had not found any clues in the past few days. It was difficult to continue searching for Li Yongxun under the pretext of searching for Censor Gao.
 
-Lin Ming's face was ashen. His sister-in-law had most likely fallen into the hands of the髡-thieves—although he didn't know why the髡-thieves had captured her. Now she might have already been sent to Lin'gao. The matter had become very tricky. Not to mention that Lin'gao was now the territory of the髡-thieves, even in the past, Qiongzhou was a place of pestilence that officials avoided.
+Lin Ming's face was ashen. His sister-in-law had most likely fallen into the hands of the short-haired bandits—although he didn't know why the short-haired bandits had captured her. Now she might have already been sent to Lin'gao. The matter had become very tricky. Not to mention that Lin'gao was now the territory of the short-haired bandits, even in the past, Qiongzhou was a place of pestilence that officials avoided.
 
-In the end, she was his relative. When Qianqian's family came to pick her up and failed, he had patted his chest and promised to ensure her safety in Guangdong. Now she had been abducted by the髡-thieves—the髡-thieves' reputation for being lecherous was no joke! If something were to happen, he would have a hard time explaining it to his wife.
+In the end, she was his relative. When Qianqian's family came to pick her up and failed, he had patted his chest and promised to ensure her safety in Guangdong. Now she had been abducted by the short-haired bandits - their reputation for being lecherous was no joke! If something were to happen, he would have a hard time explaining it to his wife.
 
-"Damn you, you bunch of fucking髡-thieves!" Lin Ming gritted his teeth. "I'll definitely wipe you out!"
+"Damn you, you bunch of fucking bandits!" Lin Ming gritted his teeth. "I'll definitely wipe you out!"
