--- a/_posts/2012-1-15-5-01800.md
+++ b/_posts/2012-1-15-5-01800.md
@@ -24,7 +24,7 @@ The foremen monitored the entire labor process. They did not carry weapons. No m
 
 As a backup, at any site where slaves worked collectively, at least one squad of soldiers was stationed on guard duty, ready to be deployed for armed riot control at any time. Sentinels in the watchtowers built on the hillsides and hilltops constantly monitored every corner of the mine and valley with telescopes. According to orders, these sentinels had the authority to shoot any "suspicious" slave at any time.
 
-At first, the slaves' work efficiency was not high, but after a few days, they fully understood the "髡-thieves'" employment policy, and their production efficiency immediately increased. In fact, the efficiency of slave labor in the mines and on the roadbed projects in Sanya was much higher than many Senators who questioned slave labor had estimated. The former HR professionals in the Planning Institute did not believe this was the result of high-pressure policies, but rather of effective labor management.
+At first, the slaves' work efficiency was not high, but after a few days, they fully understood the "Ao-Song'" employment policy, and their production efficiency immediately increased. In fact, the efficiency of slave labor in the mines and on the roadbed projects in Sanya was much higher than many Senators who questioned slave labor had estimated. The former HR professionals in the Planning Institute did not believe this was the result of high-pressure policies, but rather of effective labor management.
 
 "If a sweatshop with basic human rights can be managed, why can't slaves who don't even have the right to survive be managed?" a Senator who had once worked as an HR in a sweatshop said. "If the labor efficiency of slaves is really so bad, why would the southern slave owners spend so much money to buy slaves from Africa and even fight a war over it?"
 
