--- a/_posts/2012-1-5-5-00800.md
+++ b/_posts/2012-1-5-5-00800.md
@@ -10,9 +10,9 @@ After Lin Ming arrived in Guangzhou and paid his respects to Li Fengjie, He Chen
 
 The best outcome, of course, would be to find Gao Shunqin and bring him back, which would make everyone happy. If he couldn't be found, how to report it would be a headache.
 
-Lin Ming knew that since He Zhen's defeat, it was fortunate that Wang Zunde had died in a timely manner. This gave the staff and advisors ample room to maneuver. In short, Wang Zunde became the main culprit. Li Fengjie managed logistics from the rear, He Zhen fought bravely at the front, and the soldiers fought with their lives... In the end, the government forces, after an initial defeat, emerged victorious, fighting for a month and thwarting the髡-thieves' attempt to capture the prefecture and seize the county... The髡-thieves, in a desperate move, fled to Guangzhou, where they were defeated by the coastal defense commander Xu Tingfa. The entire Qiongzhou prefecture was secured, without the loss of a single prefecture or county...
+Lin Ming knew that since He Zhen's defeat, it was fortunate that Wang Zunde had died in a timely manner. This gave the staff and advisors ample room to maneuver. In short, Wang Zunde became the main culprit. Li Fengjie managed logistics from the rear, He Zhen fought bravely at the front, and the soldiers fought with their lives... In the end, the government forces, after an initial defeat, emerged victorious, fighting for a month and thwarting the short-haired bandits' attempt to capture the prefecture and seize the county... The bandits, in a desperate move, fled to Guangzhou, where they were defeated by the coastal defense commander Xu Tingfa. The entire Qiongzhou prefecture was secured, without the loss of a single prefecture or county...
 
-This routine of concealing defeats and embellishing victories could also be applied to this matter. He thought it over and over. If Gao Shunqin had really died at the hands of the髡-thieves or the Portuguese, the best way to handle it would be to report him as "whereabouts unknown" and turn it into a cold case—of course, that depended on whether Governor Li and the others were sensible. Anyway, he, Lin Ming, was just a "guest official" in this case.
+This routine of concealing defeats and embellishing victories could also be applied to this matter. He thought it over and over. If Gao Shunqin had really died at the hands of the short-haired bandits or the Portuguese, the best way to handle it would be to report him as "whereabouts unknown" and turn it into a cold case—of course, that depended on whether Governor Li and the others were sensible. Anyway, he, Lin Ming, was just a "guest official" in this case.
 
 Lin Ming mulled over the causes and consequences until his eyes gleamed, losing all sleepiness. By then, the third watch of the night had already been sounded. Suddenly, he heard the loud sound of a door opening and closing in the courtyard. He couldn't help but wonder—it was the middle of the night, and besides the yamen runners on guard, there were no outsiders in the Gao residence. Who was walking around in the courtyard? He quickly got out of bed and peered through a small piece of glass inlaid in the window. It was his sister-in-law. This little girl, for some unknown reason, was standing in the courtyard, staring at the sky in a daze.
 
@@ -44,21 +44,21 @@ The leader nodded slightly.
 
 The leader smiled lightly and pulled off his hat—as if by magic, his head seemed to shed a layer of skin, revealing short stubble.
 
-"You are the髡-thieves!" he exclaimed, both shocked and angry.
+"You are the short-haired bandits!" he exclaimed, both shocked and angry.
 
 "This official is the Acting Minister of the Court of Receptions of the Great Song's Australian Regency." The young man uttered this sentence fluently. He had practiced it countless times in private to fully display the majesty of the Great Song.
 
-Gao Shunqin was stunned. He had no knowledge of Song Dynasty history and was a little slow to react to Jiang Shan's sudden announcement. However, he immediately sneered, "You are just overseas barbarians!" He then thought that since the髡-thieves had captured him, this must be their lair, Lin'gao! He had been in a semi-conscious state since he was captured, and his memory was not very clear. He couldn't remember if he had been out at sea. The few remaining impressions seemed to include being on a boat and hearing the cries of seagulls.
+Gao Shunqin was stunned. He had no knowledge of Song Dynasty history and was a little slow to react to Jiang Shan's sudden announcement. However, he immediately sneered, "You are just overseas barbarians!" He then thought that since the short-haired bandits had captured him, this must be their lair, Lin'gao! He had been in a semi-conscious state since he was captured, and his memory was not very clear. He couldn't remember if he had been out at sea. The few remaining impressions seemed to include being on a boat and hearing the cries of seagulls.
 
 His heart sank. Given his past anti-foreigner rhetoric, it was needless to say that these overseas barbarians who claimed to be descendants of the Great Song hated him to the bone. They must have gone to great lengths to capture him in order to torture him in every possible way and then execute him by slow slicing, to intimidate the court officials in Guangdong.
 
-At this thought, Gao Shunqin felt a sense of utter despair. The髡-thieves were able to abduct him from his residence in Guangzhou and bring him to Lin'gao without anyone knowing. Their methods and abilities were far beyond the imagination of ordinary people. He was afraid that up to this point, the officials in Guangzhou still didn't know he had been taken to Lin'gao, let alone come to rescue him.
+At this thought, Gao Shunqin felt a sense of utter despair. The Ao bandits were able to abduct him from his residence in Guangzhou and bring him to Lin'gao without anyone knowing. Their methods and abilities were far beyond the imagination of ordinary people. He was afraid that up to this point, the officials in Guangzhou still didn't know he had been taken to Lin'gao, let alone come to rescue him.
 
 "This must be Lin'gao!" he asked nervously. "What do you want?"
 
 "We will entertain you for a few days, sir. Please be patient," Jiang Shan said.
 
-"Hmph, you must want me to change my ways and submit a memorial on your behalf for trade!" Gao Shunqin said loudly. "This is a fool's dream! I will never obey!" He said this with great bravado, but in his heart, he was in turmoil, not knowing what these髡-thieves were planning to do. From the so-called "Great Song official title" that the髡-thief had revealed, it was most likely that they wanted him to serve the enemy!
+"Hmph, you must want me to change my ways and submit a memorial on your behalf for trade!" Gao Shunqin said loudly. "This is a fool's dream! I will never obey!" He said this with great bravado, but in his heart, he was in turmoil, not knowing what these Ao bandits were planning to do. From the so-called "Great Song official title" that the bandit had revealed, it was most likely that they wanted him to serve the enemy!
 
 Of course, Gao Shunqin would not surrender. This group of overseas barbarians who claimed to be descendants of the Great Song only occupied a single county in Lin'gao. At best, they could only carve out a territory in Qiongzhou Prefecture and crown themselves kings, like monkeys in clothes. How could he, a dignified Provincial Censor with a Jinshi degree, serve a thief?
 
