--- a/_posts/2013-10-8-6-17800.md
+++ b/_posts/2013-10-8-6-17800.md
@@ -102,7 +102,7 @@ However, they had both forgotten that while they were secretly plotting against 
 
 Since he was not unaware, he would have a countermove. Right now, they were in the dark, and Zhao Yigong was in the open. The most effective way to reverse the situation would be to plant an undercover agent.
 
-Hao Yuan's words were like a wake-up call for Gou Chengxuan. These髡-thieves were truly cunning! He gritted his teeth. "Thank you for the reminder, Brother Hao! I almost fell for that bald Zhao's trick!"
+Hao Yuan's words were like a wake-up call for Gou Chengxuan. These short haired thieves were truly cunning! He gritted his teeth. "Thank you for the reminder, Brother Hao! I almost fell for that bald Zhao's trick!"
 
 Hao Yuan said faintly, "It's no matter. Zhao Yigong is blinded by his own cleverness. Since he thinks he's so smart, we'll just turn his own trick against him." He opened his ink box, picked up a brush, and quickly wrote a few lines on a piece of paper. "I'll have to trouble Brother Gou to summon the informants from the villa again and ask them about the matters on this paper one by one. The more detailed, the better."
 
